# quantinuum-schemas

./: .cz.toml  .envrc  CHANGELOG.md  README.md  devenv.nix  devenv.yaml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  pr-title.yml  release.yml
quantinuum_schemas/: __init__.py
quantinuum_schemas/models/: aer_noise.py  backend_config.py  backend_info.py  base.py  emulator_config.py  hypertket_config.py  prototype_config.py  quantinuum_systems_noise.py  result.py  selene_config.py
scripts/: ci_checks.sh
tests/models/: test_backend_config.py  test_backend_info.py  test_hypertket_config.py  test_result.py
