[tool.poetry]
name = "quantinuum-schemas"
version = "3.2.5"
description = "Shared data models for Quantinuum."
authors = ["Matthew Burke <matthew.burke@quantinuum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.8.0"
pylint = "^3.0.3"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
commitizen = "^3.29.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

